# Open-MilkSense

./: .gitattributes  .gitignore  README.md
.claude/: launch.json
.github/workflows/: deploy.yml
Esp32/master/: master.ino
Esp32/master/src/: gps.h  lora.h
Esp32/slave/: slave.ino
Esp32/slave/src/: gps.h  lora.h  rfid.h  sensors.h
backend/: pyproject.toml
backend/src/modules/scikit/: main.py  make_datasets.py  test.py
backend/src/modules/scikit/datasets/: Cow_Behavior_Dataset.csv  Cow_Health_Dataset.csv
backend/src/modules/yolo/: main.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnimalList.jsx  CowDetail.jsx  Map.jsx  charts.jsx
frontend/src/lib/: ui.js
frontend/src/sim/: analytics.js  geofence.js  herd.js  model.js  useHerd.js
