[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "skl2onnx>=1.20.0",
    "ultralytics>=8.4.76",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src"]

[tool.pyright]
extraPaths = ["src"]
